@@ -1,3 +1,7 @@
+2001-08-23  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	* g++.dg/unify1.C: New test.
+
 2001-08-19  Release Manager
 
 	* GCC 3.0.1 Released.
